fix alignment link-list not matching - issue 64

--- a/express/code/blocks/link-list/link-list.css
+++ b/express/code/blocks/link-list/link-list.css
@@ -5,6 +5,7 @@
 .section  .link-list-wrapper {
   padding: 60px 0 0 0;
   margin: 0 auto;
+  max-width: 375px;
 }
 
 .section .link-list-wrapper .link-list.narrow {
@@ -192,6 +193,7 @@
   .section .link-list-wrapper {
     padding: 60px 50px 0 50px;
     margin: 0 auto;
+    max-width: 830px;
   }
 
   .section .link-list {
@@ -222,7 +224,13 @@
 
 @media (min-width: 1200px) {
   .section .link-list-wrapper {
+    max-width: 1024px;
+  }
+}
+
+
+@media (min-width: 1200px) {
+  .section .link-list-wrapper {
     padding: 60px 55px 0 55px;
-    max-width: 1200px;
   }
 }
